# sc_pong

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  README.md  sc_pong.kdev4  sc_pong.kdevelop  sc_pong.kdevelop.filelist  sc_pong.kdevelop.pcs  sc_pong.kdevses
src/: CAnimation.cpp  CAnimation.h  CBall.cpp  CBall.h  CControl.cpp  CControl.h  CController.h  CCtrlJoystick.cpp  CCtrlJoystick.h  CCtrlKeyboard.cpp  CCtrlKeyboard.h  CCtrlNet.cpp  CCtrlNet.h  CFramerate.cpp  CFramerate.h  CGame.cpp  CGame.h  CGraphics.cpp  CGraphics.h  CMakeLists.txt  CPhysics.cpp  CPhysics.h  CPlayer.cpp  CPlayer.h  CVector.h  audio.cpp  audio.h  error.cpp  error.h  main.cpp  main.h  menus.cpp  menus.h  scfont.cpp  scfont.h  widgets.cpp  widgets.h
templates/: h
